<resources>
    <string name="app_name">ZoomableScrollView</string>

    <string name="example1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dictum luctus metus sit amet dictum. Nulla eleifend, ante eget rutrum vulputate, magna dolor malesuada lorem, at aliquam nisi metus ut ipsum. Donec eu porttitor tellus, eu semper turpis. Curabitur quis lacus ultrices, facilisis eros non, maximus erat. Sed in posuere tellus. Etiam gravida ac est sed lacinia. Cras quam erat, tempor viverra ornare id, mattis nec magna. Suspendisse nibh ligula, vehicula eget dui quis, consequat elementum libero. Donec lacus mi, luctus ac feugiat quis, tempus eget leo. Aenean eu neque vel nisi dignissim egestas. Quisque sit amet massa vel nulla fringilla facilisis vitae non sapien. Nam luctus risus ut velit posuere ullamcorper. Nullam finibus nisi ut felis consectetur, ac cursus odio lobortis.</string>
    <string name="example2">Quisque posuere elit vitae magna accumsan, vel luctus diam accumsan. Suspendisse vel ornare ligula. Vestibulum purus justo, luctus ac quam scelerisque, auctor laoreet mauris. Nam aliquam dui a arcu varius tincidunt. Donec at gravida ex. Phasellus luctus bibendum odio, at molestie ligula rhoncus sed. Sed aliquet eros tellus, sit amet blandit tellus cursus eget. Cras vitae sem quis felis vehicula malesuada varius in magna.</string>
    <string name="example3">In a magna ut justo egestas aliquam. Proin luctus tincidunt mollis. Vivamus molestie nisl augue, eget ultrices neque posuere nec. Curabitur a orci at tellus accumsan interdum. Sed elit dolor, vestibulum at posuere vel, placerat molestie risus. Fusce bibendum ipsum in quam aliquet vehicula. Curabitur mollis tellus et posuere tincidunt. Sed non metus facilisis velit rhoncus luctus at vitae sapien. Sed rutrum, velit vel lacinia venenatis, orci erat blandit ipsum, vitae egestas nulla nunc et libero.</string>
    <string name="example4">Phasellus leo massa, mattis in pharetra et, pellentesque ut justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris arcu nunc, volutpat non mattis et, egestas ac odio. Proin volutpat venenatis fringilla. Sed dapibus eget lorem accumsan pulvinar. Quisque gravida porta sem, id elementum libero maximus non. Nunc quis laoreet purus.</string>
    <string name="example5">Nam urna lacus, viverra at finibus nec, tristique et quam. Nullam tempor, felis nec tempor euismod, mi lorem gravida nisi, a hendrerit elit tellus at ante. Fusce tempus nunc lacus, vel venenatis dui sodales id. Maecenas sit amet lobortis augue. Donec gravida blandit enim sed laoreet. Sed sit amet massa consequat, feugiat tellus eleifend, viverra risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vulputate vitae lectus ut tincidunt. Donec tortor mi, pulvinar quis rutrum quis, bibendum eu mi. Quisque fringilla nulla ac libero pretium tristique. Cras placerat sed ligula eu ullamcorper. Vestibulum consequat ultricies lacus, sit amet venenatis quam. Mauris mi neque, condimentum non consectetur in, blandit vitae erat. In blandit sapien ac nisi pulvinar, porta pharetra diam placerat.</string>
</resources>
